--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -51,6 +51,7 @@
       <li><a href="README.html#label-ontopia-topicmaps+-+Query+topic+maps+with+Ontopia">ontopia-topicmaps - Query topic maps with Ontopia</a>
       <li><a href="README.html#label-VERSION">VERSION</a>
       <li><a href="README.html#label-DESCRIPTION">DESCRIPTION</a>
+      <li><a href="README.html#label-SUPPORTED+PLATFORMS">SUPPORTED PLATFORMS</a>
       <li><a href="README.html#label-LINKS">LINKS</a>
       <li><a href="README.html#label-AUTHORS">AUTHORS</a>
       <li><a href="README.html#label-LICENSE+AND+COPYRIGHT">LICENSE AND COPYRIGHT</a>
