--- a/README.html
+++ b/README.html
@@ -51,6 +51,7 @@
       <li><a href="#label-ontopia-topicmaps+-+Query+topic+maps+with+Ontopia">ontopia-topicmaps - Query topic maps with Ontopia</a>
       <li><a href="#label-VERSION">VERSION</a>
       <li><a href="#label-DESCRIPTION">DESCRIPTION</a>
+      <li><a href="#label-SUPPORTED+PLATFORMS">SUPPORTED PLATFORMS</a>
       <li><a href="#label-LINKS">LINKS</a>
       <li><a href="#label-AUTHORS">AUTHORS</a>
       <li><a href="#label-LICENSE+AND+COPYRIGHT">LICENSE AND COPYRIGHT</a>
@@ -117,6 +118,12 @@
 the <code>OTM_BASE</code> environment variable in case it cannot be found
 automatically). Note, though, that&#39;s it not required to run the
 application server, only the JAR files are needed.</p>
+
+<h2 id="label-SUPPORTED+PLATFORMS">SUPPORTED PLATFORMS<span><a href="#label-SUPPORTED+PLATFORMS">&para;</a> <a href="#documentation">&uarr;</a></span></h2>
+
+<p><a href="Ontopia/Topicmaps.html">Ontopia::Topicmaps</a> requires <a
+href="http://jruby.org">JRuby</a>. It has been tested with jruby 1.7.4
+(1.9.3p392) on OpenJDK 64-Bit Server VM 1.6.0_27-b27 [linux-amd64].</p>
 
 <h2 id="label-LINKS">LINKS<span><a href="#label-LINKS">&para;</a> <a href="#documentation">&uarr;</a></span></h2>
 
