--- a/README.html
+++ b/README.html
@@ -116,8 +116,9 @@
 <a href="http://ontopia.net/doc/current/install.html">installation</a> of
 <a href="Ontopia.html">Ontopia</a> needs to be present (point to it through
 the <code>OTM_BASE</code> environment variable in case it cannot be found
-automatically). Note, though, that&#39;s it not required to run the
-application server, only the JAR files are needed.</p>
+automatically). Note, though, that it&#39;s not required to run the <a
+href="Ontopia.html">Ontopia</a> application server, only the JAR files are
+needed.</p>
 
 <h2 id="label-SUPPORTED+PLATFORMS">SUPPORTED PLATFORMS<span><a href="#label-SUPPORTED+PLATFORMS">&para;</a> <a href="#documentation">&uarr;</a></span></h2>
 
